--- a/FIAP.API/FIAP.API.csproj
+++ b/FIAP.API/FIAP.API.csproj
@@ -9,4 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FIAP.Repositories\FIAP.Repositories.csproj" />
+  </ItemGroup>
 </Project>
